Define GPU Resource Flavor
Signed-off-by: smalleni <smalleni@redhat.com>

--- a/kueue/kube-burner/cluster-queue.yml
+++ b/kueue/kube-burner/cluster-queue.yml
@@ -7,13 +7,9 @@ spec:
   namespaceSelector: {} # An empty selector allows all namespaces to use this ClusterQueue.
   queueingStrategy: BestEffortFIFO
   resourceGroups:
-  - coveredResources: ["cpu", "memory", "nvidia.com/gpu"]
+  - coveredResources: ["nvidia.com/gpu"]
     flavors:
-    - name: "default-flavor"
+    - name: "gpu-flavor"
       resources:
-      - name: "cpu"
-        nominalQuota: "6" # Total available CPUs in this queue
-      - name: "memory"
-        nominalQuota: "8Gi" # Total available memory in this queue
       - name: "nvidia.com/gpu"
         nominalQuota: 1
