--- a/das/manifests/kube-burner-whisper.yml
+++ b/das/manifests/kube-burner-whisper.yml
@@ -3,11 +3,23 @@ global:
   gcMetrics: false
   measurements:
   - name: jobLatency
+
 metricsEndpoints:
-  - indexer:
+{{ if .ES_SERVER }}
+  - metrics: [metrics.yml]
+    indexer:
+      insecureSkipVerify: true
+      esServers: [{{.ES_SERVER}}]
+      defaultIndex: {{.ES_INDEX}}
+      type: opensearch      
+{{ end }}
+{{ if .LOCAL_INDEXING }}
+  - metrics: [metrics.yml]
+    indexer:
       type: local
-      metricsDirectory: whisper-results-{{.UUID}}
-  
+      metricsDirectory: whisper-result-{{.UUID}}
+{{ end }}
+
 jobs:
   - name: create-namespace
     qps: 1
@@ -37,38 +49,20 @@ jobs:
 
   - name: whisper-scale
     namespace: whisper-scale
-    #jobIterations: 5
-    jobIterations: 15
+    jobIterations: {{.ITERATIONS}}
     preLoadImages: false #TODO - true
+    preLoadPeriod: 10m
     namespacedIterations: false
     cleanup: true
     podWait: true
     qps: 1
     burst: 1
     objects:
-      - objectTemplate: whisper-das-tiny.yml
-        #replicas: 2
+      - objectTemplate: whisper-transcription-medium.yml
         replicas: 1
         inputVars:
-          das: true
-      # - objectTemplate: whisper-das-small.yml
-      #   replicas: 1
-      #   inputVars:
-      #     das: true
-      #     offset: "50"
-
-  # - name: whisper-scale2
-  #   namespace: whisper-scale
-  #   jobIterations: 5
-  #   preLoadImages: false #TODO - true
-  #   namespacedIterations: false
-  #   cleanup: true
-  #   podWait: true
-  #   qps: 1
-  #   burst: 1
-  #   objects:
-  #     - objectTemplate: whisper-das-small.yml
-  #       replicas: 1
-  #       inputVars:
-  #         das: true
-  #         offset: "50"
+          das: {{.DAS}}
+      - objectTemplate: whisper-transcription-large.yml
+        replicas: 1
+        inputVars:
+          das: {{.DAS}}
